--- a/pin_order.cfg
+++ b/pin_order.cfg
@@ -1,4 +1,37 @@
-TOP: [clk_i, rst_ni, instr_gnt_i, instr_rvalid_i, instr_addr_o, instr_rdata_i]
-BOTTOM: [data_gnt_i, data_rvalid_i, data_we_o, data_addr_o, data_wdata_o, data_rdata_i]
-LEFT: [irq_software_i, irq_timer_i, irq_external_i, irq_fast_i]
-RIGHT: [hart_id_i, boot_addr_i, crash_dump_o]
+# Pin order configuration file for IBEX processor design
+
+# Define the order for power pins (VDD and GND)
+VDD_PINS:
+  - vccd1
+
+GND_PINS:
+  - vssd1
+
+# Define input pins (clock, reset, data, address, and control signals)
+IN_PINS:
+  - name: clk_i
+    pin: X  # Driven by sky130_fd_sc_hd__clkbuf_2
+  - name: rst_ni
+    pin: Q  # Driven by sky130_fd_sc_hd__dfxtp_1
+  - name: data_in
+    pin: Q
+  - name: addr
+    pin: Q
+  - name: control_signals
+    pin: Q
+
+# Define output pins
+OUT_PINS:
+  - name: data_out
+    pin: Q
+
+# Define bidirectional pins (memory-related signals)
+BIDIR_PINS:
+  - name: mem_a
+    pin: Q
+  - name: mem_b
+    pin: Q
+  - name: mem_w
+    pin: Q
+  - name: mem_r
+    pin: Q
