--- a/config.yaml
+++ b/config.yaml
@@ -1,46 +1,43 @@
-# Configuration for IBEX processor design in OpenLane2/OpenRoad tool flow
-
 DESIGN_NAME: top
-VERILOG_FILES: 
-  - dir::src/ibex_alu.v
-  - dir::src/ibex_branch_predict.v
-  - dir::src/ibex_compressed_decoder.v
-  - dir::src/ibex_controller.v
-  - dir::src/ibex_core.v
-  - dir::src/ibex_counter.v
-  - dir::src/ibex_cs_registers.v
-  - dir::src/ibex_csr.v
-  - dir::src/ibex_decoder.v
-  - dir::src/ibex_dummy_instr.v
-  - dir::src/ibex_ex_block.v
-  - dir::src/ibex_fetch_fifo.v
-  - dir::src/ibex_icache.v
-  - dir::src/ibex_id_stage.v
-  - dir::src/ibex_if_stage.v
-  - dir::src/ibex_load_store_unit.v
-  - dir::src/ibex_multdiv_fast.v
-  - dir::src/ibex_multdiv_slow.v
-  - dir::src/ibex_pmp.v
-  - dir::src/ibex_prefetch_buffer.v
-  - dir::src/ibex_register_file_ff.v
-  - dir::src/ibex_register_file_fpga.v
-  - dir::src/ibex_register_file_latch.v
-  - dir::src/ibex_wb_stage.v
-  - dir::src/prim_badbit_ram_1p.v
-  - dir::src/prim_clock_gating.v
-  - dir::src/prim_generic_clock_gating.v
-  - dir::src/prim_generic_ram_1p.v
-  - dir::src/prim_lfsr.v
-  - dir::src/prim_ram_1p.v
-  - dir::src/prim_secded_28_22_dec.v
-  - dir::src/prim_secded_28_22_enc.v
-  - dir::src/prim_secded_39_32_dec.v
-  - dir::src/prim_secded_39_32_enc.v
-  - dir::src/prim_secded_72_64_dec.v
-  - dir::src/prim_secded_72_64_enc.v
-  - dir::src/prim_xilinx_clock_gating.v
-  - dir::src/mem/sky130_sram_1kbyte_1rw1r_32x256_8.v
-  - dir::src/top.v
+VERILOG_FILES: [dir::src/ibex_alu.v,
+                dir::src/ibex_branch_predict.v,
+                dir::src/ibex_compressed_decoder.v,
+                dir::src/ibex_controller.v,
+                dir::src/ibex_core.v,
+                dir::src/ibex_counter.v,
+                dir::src/ibex_cs_registers.v,
+                dir::src/ibex_csr.v,
+                dir::src/ibex_decoder.v,
+                dir::src/ibex_dummy_instr.v,
+                dir::src/ibex_ex_block.v,
+                dir::src/ibex_fetch_fifo.v,
+                dir::src/ibex_icache.v,
+                dir::src/ibex_id_stage.v,
+                dir::src/ibex_if_stage.v,
+                dir::src/ibex_load_store_unit.v,
+                dir::src/ibex_multdiv_fast.v,
+                dir::src/ibex_multdiv_slow.v,
+                dir::src/ibex_pmp.v,
+                dir::src/ibex_prefetch_buffer.v,
+                dir::src/ibex_register_file_ff.v,
+                dir::src/ibex_register_file_fpga.v,
+                dir::src/ibex_register_file_latch.v,
+                dir::src/ibex_wb_stage.v,
+                dir::src/prim_badbit_ram_1p.v,
+                dir::src/prim_clock_gating.v,
+                dir::src/prim_generic_clock_gating.v,
+                dir::src/prim_generic_ram_1p.v,
+                dir::src/prim_lfsr.v,
+                dir::src/prim_ram_1p.v,
+                dir::src/prim_secded_28_22_dec.v,
+                dir::src/prim_secded_28_22_enc.v,
+                dir::src/prim_secded_39_32_dec.v,
+                dir::src/prim_secded_39_32_enc.v,
+                dir::src/prim_secded_72_64_dec.v,
+                dir::src/prim_secded_72_64_enc.v,
+                dir::src/prim_xilinx_clock_gating.v,
+                dir::src/mem/sky130_sram_1kbyte_1rw1r_32x256_8.v,
+                dir::src/top.v]
 
 ERROR_ON_LINTER_ERRORS: false
 ERROR_ON_SYNTH_CHECKS: false
@@ -51,15 +48,14 @@ FP_CORE_UTIL: 20
 
 # Must create base.sdc
 PNR_SDC_FILE: dir::base.sdc
-
 # Must create signoff.sdc
 SIGNOFF_SDC_FILE: dir::signoff.sdc
 
-# Lef write configuration
+# lef write configuration
 MAGIC_WRITE_LEF_PINONLY: true
 MAGIC_LEF_WRITE_USE_GDS: false
 
-# DRC tool configuration
+# drc tool configuration
 RUN_MAGIC_DRC: false
 RUN_KLAYOUT_DRC: true
 RUN_MAGIC_STREAMOUT: false
@@ -67,21 +63,37 @@ RUN_KLAYOUT_STREAMOUT: true
 RUN_KLAYOUT_XOR: false
 PRIMARY_GDSII_STREAMOUT_TOOL: klayout
 
-# Macro Placement
-MACROS:
+
+MACROS: 
   sky130_sram_1kbyte_1rw1r_32x256_8:
     gds: dir::src/mem/sky130_sram_1kbyte_1rw1r_32x256_8.gds
     lef: dir::src/mem/sky130_sram_1kbyte_1rw1r_32x256_8.lef 
     lib: 
       "*": dir::src/mem/sky130_sram_1kbyte_1rw1r_32x256_8_TT_1p8V_25C.lib
+
     instances:
       mem_inst0:
         orientation: N
-        location: [300, 800]
+        location: [300, 300] #dont know total die area yet, for first run leave out location, run until floor planning, look @ metrics to see size
+
       mem_inst1:
-        orientation: S
-        location: [950, 800]
-  
+        orientation: N 
+        location: [300,900] #estimate from .lib file: area : 190712.55 (should be close to square ~ 450x450), make 1640 for block so dont wanna palce outside of that 700+400= 1100 so we good
+
+RUN_HEURISTIC_DIODE_INSERTION: true
+# RUN_POST_GRT_DESIGN_REPAIR: true
+       
+GRT_ADJUSTMENT: 0.3  # helps avoid congestion during global routing
+GRT_RESIZER_SETUP_SLACK_MARGIN: 0.8
+GRT_RESIZER_HOLD_SLACK_MARGIN: 0.6
+GRT_RESIZER_HOLD_MAX_BUFFER_PCT: 100 #used to be 100
+GRT_RESIZER_SETUP_MAX_BUFFER_PCT: 100
+RUN_POST_GRT_RESIZER_TIMING: true
+DIODE_ON_PORTS: 'both'  # diodes are on both input and output ports
+GRT_ANTENNA_ITERS: 30 #50  
+GRT_ANTENNA_MARGIN: 75 
+
+# This will only run one corner. Good for exploration, but not full sign-off!
 STA_CORNERS: [nom_tt_025C_1v80, fast_ff_n40C_1v95, slow_ss_100C_1v60]
 PDN_MACRO_CONNECTIONS: ["mem_inst0 vccd1 vssd1 vccd1 vssd1", "mem_inst1 vccd1 vssd1 vccd1 vssd1"]
 VERILOG_POWER_DEFINE: USE_POWER_PINS
@@ -90,14 +102,13 @@ ERROR_ON_PDN_VIOLATIONS: false
 VDD_NETS: ["vccd1"]
 GND_NETS: ["vssd1"]
 
-# Placement configuration
 PL_MAX_DISPLACEMENT_X: 500
 PL_MAX_DISPLACEMENT_Y: 500
 
-# Pin order configuration file
+# Must create pin_order.cfg
 FP_PIN_ORDER_CFG: dir::pin_order.cfg
 
-# PDN Parameters
+# PDN
 FP_PDN_VOFFSET: 5
 FP_PDN_HOFFSET: 5
 FP_PDN_VWIDTH: 2
@@ -105,3 +116,5 @@ FP_PDN_HWIDTH: 2
 FP_PDN_VPITCH: 30
 FP_PDN_HPITCH: 30
 FP_PDN_SKIPTRIM: true
+
+
