--- a/pin_order.cfg
+++ b/pin_order.cfg
@@ -1,37 +1,20 @@
-# Pin order configuration file for IBEX processor design
+#N
+@min_distance=0.5
+alert_.*
+core_sleep_o
 
-# Define the order for power pins (VDD and GND)
-VDD_PINS:
-  - vccd1
+#S
+rst_ni
+test_en_i
+fetch_enable_i
+debug_req_i
 
-GND_PINS:
-  - vssd1
+#E
+clk_i
+irq_.*
+hart_id_i\[.*\]
+boot_addr_i\[.*\]
 
-# Define input pins (clock, reset, data, address, and control signals)
-IN_PINS:
-  - name: clk_i
-    pin: X  # Driven by sky130_fd_sc_hd__clkbuf_2
-  - name: rst_ni
-    pin: Q  # Driven by sky130_fd_sc_hd__dfxtp_1
-  - name: data_in
-    pin: Q
-  - name: addr
-    pin: Q
-  - name: control_signals
-    pin: Q
-
-# Define output pins
-OUT_PINS:
-  - name: data_out
-    pin: Q
-
-# Define bidirectional pins (memory-related signals)
-BIDIR_PINS:
-  - name: mem_a
-    pin: Q
-  - name: mem_b
-    pin: Q
-  - name: mem_w
-    pin: Q
-  - name: mem_r
-    pin: Q
+#W
+instr_.*
+data_.*
